updated html, fix tests.

--- a/src/main/resources/templates/usage-sfdc.html
+++ b/src/main/resources/templates/usage-sfdc.html
@@ -171,6 +171,7 @@
       </div>
       <div class="slds-panel__body">Fill input field like below. Type should be Salesforce Connect: OData 4.0. URL
         should be https://oiyokan.herokuapp.com/odata4.svc/. And click Save.</div>
+      <div class="slds-panel__body">If you want to write entity, set `Writable External Objects` checked.</div>
       <div class="slds-var-p-around_medium">
         <img src="./usage/sfdc/usage-sfdc-ext03.png" />
       </div>
@@ -296,7 +297,8 @@
   <div class="slds-p-top_medium slds-p-left_medium">
     <div class="slds-panel slds-size_x-large slds-is-open" aria-hidden="false">
       <div class="slds-panel__header">
-        <h2 class="slds-panel__header-title slds-text-heading_small slds-truncate" title="Panel Header">End of this article</h2>
+        <h2 class="slds-panel__header-title slds-text-heading_small slds-truncate" title="Panel Header">End of this
+          article</h2>
         <button class="slds-button slds-button_icon slds-button_icon-small slds-panel__close"
           title="Collapse Panel Header">
           <svg class="slds-button__icon" aria-hidden="true">
@@ -304,7 +306,8 @@
           </svg>
         </button>
       </div>
-      <div class="slds-panel__body">With the above steps, you can use Oiyokan as a external object from Salesforc. Here is the end of this article. Thank you very much reading this article.</div>
+      <div class="slds-panel__body">With the above steps, you can use Oiyokan as a external object from Salesforc. Here
+        is the end of this article. Thank you very much reading this article.</div>
     </div>
   </div>
 
