--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -334,7 +334,7 @@
     </svg>
     <div class="slds-text-longform">
       <h3 class="slds-illustration__header slds-text-heading_medium">Oiyokan OData v4 Server SDK</h3>
-      <p class="slds-badge">v<span th:text="${indexBean.version}" th:remove="tag" /></p>
+      <p class="slds-badge">Oiyokan Demosite v<span th:text="${indexBean.demositeVersion}" th:remove="tag" /></p>
     </div>
   </div>
 
@@ -354,6 +354,7 @@
               href="https://www.h2database.com/" target="_blank">h2</a>.</li>
           <li><a href="https://github.com/igapyon/oiyokan" target="_blank">Source code at github</a>, license : <a
               href="https://www.apache.org/licenses/LICENSE-2.0" target="_blank">Apache License</a>.</li>
+          <li>This demosite is running with Oiyokan v<span th:text="${indexBean.version}" th:remove="tag" />.</li>
         </ul>
       </dd>
 
